--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,9 @@
     "express-validator": "^7.2.0",
     "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
-    "mailtrap": "^4.0.0",
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "socket.io": "^4.8.1"
   },
